k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medisnap
  namespace: medisnap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medisnap
  template:
    metadata:
      labels:
        app: medisnap
    spec:
      nodeSelector:
        workload: test-medisnap
      containers:
        - name: medisnap
          image: 493354281237.dkr.ecr.us-east-1.amazonaws.com/medisnap:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
