k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medisnap
  namespace: medisnap
spec:
  selector:
    app: medisnap
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
