k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medisnap
  namespace: medisnap
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}'
    # If you already have ACM certificate:
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:REGION:ACCOUNT:certificate/xxxx
spec:
  rules:
    - host: medisnapdiagnostics.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medisnap
                port:
                  number: 80
